トレーニングに関するエンドポイントを作成

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ MYSQL_PASSWORD=mysqluserpass
 MYSQL_ROOT_PASSWORD=mysqlrootpass
 MYSQL_PORT=3306
 MYSQL_HOST=db
-MYSQL_DB=go-rest-db
+MYSQL_DB=go_rest_db
 SECRET=uu5pveql
 GO_ENV=dev
 API_DOMAIN=localhost
