--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
 version: '3' # composeファイルのバージョン
 services:
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports: 
+      - "8080:8080"
+    volumes:
+      - .:/app
   db:
     container_name: muscle-sns-db
     platform: linux/x86_64
