データベース接続失敗を修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - "8080:8080"
     volumes:
       - .:/app
+    networks:
+      - muscle-sns-network
   db:
     container_name: muscle-sns-db
     platform: linux/x86_64
