--- a/database/dbconfig.yml
+++ b/database/dbconfig.yml
@@ -1,5 +1,5 @@
 development:
   dialect: mysql
-  datasource: ${MYSQL_USER}:${MYSQL_PASSWORD}@tcp(${MYSQL_HOST}:${MYSQL_PORT})/${MYSQL_DATABASE}?charset=utf8mb4&parseTime=True&loc=Asia%2FTokyo
+  datasource: root:mysqlrootpass@tcp(db:3306)/muscle-sns-db?charset=utf8mb4&parseTime=True&loc=Local
   dir: migrations
   table: migrations
