--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,7 @@
 version: '3' # composeファイルのバージョン
 services:
   web:
+    container_name: muscle-sns-web-dev
     build:
       context: .
       dockerfile: Dockerfile.dev
@@ -13,7 +14,7 @@ services:
     depends_on:
       - db
   db:
-    container_name: muscle-sns-db
+    container_name: muscle-sns-db-dev
     platform: linux/x86_64
     image: mysql:8.0
     ports:
@@ -28,7 +29,7 @@ services:
     networks:
       - muscle-sns-network
   redis:
-    container_name: muscle-sns-redis
+    container_name: muscle-sns-redis-dev
     image: redis:latest
     ports:
       - 6379:6379
